<resources>
    <string name="app_name">Finkeepy</string>

    <!-- General -->
    <string name="currency_ron">RON</string>
    <string name="currency_euro">EUR</string>
    <string name="amount_with_currency">%1$s %2$s</string>
    <string name="decimal">.%1$s</string>
    <string name="net_worth">Net worth</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="cashflow">Cashflow</string>

    <!-- Dashboard -->
    <string name="last_month_cashflow">%1$s RON last month</string>
    <string name="this_month_cashflow">%1$s RON this month</string>
    <string name="month_cashflow">%1$s RON in %2$s</string>
    <string name="see_all_records">See all…</string>
    <string name="no_records_available">No records available.</string>

    <!-- Records -->
    <string name="records">Records</string>

    <!-- Record details -->
    <string name="earned">Earned</string>
    <string name="spent">Spent</string>
    <string name="your_net_worth_increased_by">Your net worth increased by</string>
    <string name="your_net_worth_decreased_by">Your net worth decreased by</string>

    <!-- Charts -->
    <string name="charts">Charts</string>
    <string name="line_chart">Line</string>
    <string name="bar_chart">Bar</string>
    <string name="charts_net_worth">Net worth</string>
    <string name="total_income">Tot. income</string>
    <string name="total_expense">Tot. expense</string>
    <string name="average_cashflow">Avg. cashflow</string>
    <string name="average_income">Avg. income</string>
    <string name="average_expense">Avg. expense</string>

</resources>